# P500_ER3P_ws

./: .env  .env.example  .gitignore  .gitmodules  Dockerfile  demo.txt  docker-compose.yml  readme.md
src/: README_P500_TIDYBOT2.md  docker_cmd_vel_server.py  gripper_control_demo.py  host_keyboard_udp.py  p500_base_controller.py  p500_base_server.py  p500_keyboard_simple.py  p500_real_env.py  p500_ros2_keyboard.py  p500_ros2_monitor.py  p500_ros_keyboard.py  p500_teleop_real.py  rokae_arm_controller.py  rokae_arm_server.py  unified_robot_control.py
src/data_collect/: README.md  collect_xcore_realsense_lerobot.py
src/jodell/: er3_io_ctrl.py
src/jodell/C_C++/: SDK文档说明(C或C++版本).docx  SDK文档说明(C或C++版本).txt
src/jodell/C_C++/linux/: jodellTool.h
src/jodell/C_C++/windows/: SDK文档说明(C或C++版本).docx  jodellTool.h
src/jodell/C_C++/windows/x64/: jodellTool.lib
src/jodell/C_C++/windows/x86/: jodellTool.lib
src/jodell/python/: JodellTool-0.1.5-py3-none-any.whl  SDK开发说明(python版本).docx  SDK开发说明(python版本).txt  epg_test_usb0_id9.py
src/p500/: docker_cmd_vel_server.py  host_keyboard_udp.py  robot_api.py
src/robot/: README.md  host_vla_client.py  jetson_robot_server.py
src/xCoreSDK_cpp-v0.6.0/: Makefile
src/xCoreSDK_cpp-v0.6.0/example/: CMakeLists.txt  arm_bridge.cpp  communication_example.cpp  drag_teach_print_pose.cpp
src/xCoreSDK_cpp-v0.6.0/example/rt/: CMakeLists.txt  phone_teleop_follow_cart.cpp  phone_webxr_udp_bridge.py
src/xCoreSDK_cpp-v0.6.0/example/rt/phone_teleop_web/templates/: index.html
src/xCoreSDK_cpp-v0.7.1/: CHANGELOG.md  CMakeLists.txt  README.md
src/xCoreSDK_cpp-v0.7.1/example/: CMakeLists.txt  arm_bridge.cpp  controller_upgrade.cpp  rl_project.cpp  sdk_example.cpp
src/xCoreSDK_cpp-v0.7.1/example/rt/: CMakeLists.txt  cartesian_impedance_control.cpp  cartesian_s_line.cpp  follow_cart_position.cpp  follow_joint_position.cpp  joint_impedance_control.cpp  joint_position_control.cpp  rt_funtion_helper.hpp  servoj_demo.cpp  torque_control.cpp
src/xCoreSDK_cpp-v0.7.1/include/: CMakeLists.txt
src/xCoreSDK_cpp-v0.7.1/include/rokae/: data_types.h  model.h  planner.h  robot.h  utility.h
src/xCoreSDK_cpp-v0.7.1/lib/: CMakeLists.txt
src/xCoreSDK_cpp-v0.7.1/lib/Linux/aarch64/: libxCoreSDK.so.0.7.1
src/xCoreSDK_cpp-v0.7.1/lib/Linux/x86_64/: libxCoreSDK.so.0.7.1  libxCoreSDK_Upgrade.so.0.1
src/xcoresdk_python-v0.6.0/: .gitignore  CHANGELOG.md  README.md
src/xcoresdk_python-v0.6.0/Release/windows/: xCoreSDK_python.exp  xCoreSDK_python.lib
src/xcoresdk_python-v0.6.0/Release/windows/xCoreSDK_python/: __init__.pyi
src/xcoresdk_python-v0.6.0/example/: base_example.py  drag_example.py  drag_teach_print_pose_example.py  event_example.py  force_control_example.py  jog_example.py  move_example.py  rl_project_example.py
